# audio-metadata-access-benchmark

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  benchmark.py  generate_audio.sh  pyproject.toml
src/: _loaders.py  constants.py  utils.py
src/loaders/: __init__.py  audioread.py  ffprobe.py  librosa.py  miniaudio.py  mutagen.py  pedalboard.py  pyav.py  pydub.py  pyogg.py  scipy.py  scipy_mmap.py  soundfile.py  sox.py  stempeg.py  tinytag.py  torchcodec.py
tests/: conftest.py  test_loaders.py
tests/fixtures/: manifest.toml
tests/fixtures/audio/: whitenoise_11s_48k.opus  whitenoise_1s_48k.opus
